@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==01/24/2010==
+Trevius: Exported CheckLoS() to perl::mob.
+
 ==01/23/2010==
 Trevius: Added NPC:ReturnNonQuestNoDropItems rule to enable/disable a new feature that allows all NO DROP items to be returned if turned into a non-item-quest NPC (no EVENT_ITEM).
 Trevius: Removed a possible exploit with quest turn-ins.
